[workspace]
resolver = "2"
members = [
    "clients/rust",
    "interface",
    "program",
]

[workspace.package]
authors = ["Anza Maintainers <maintainers@anza.xyz>"]
repository = "https://github.com/solana-program/system"
homepage = "https://anza.xyz/"
license = "Apache-2.0"
edition = "2021"

[workspace.dependencies]
solana-account = { path = "../../agave/sdk/account" }
solana-account-info = { path = "../../agave/sdk/account-info" }
solana-bincode = { path = "../../agave/sdk/bincode" }
solana-cpi = { path = "../../agave/sdk/cpi" }
solana-decode-error = { path = "../../agave/sdk/decode-error" }
solana-frozen-abi = { path = "../../agave/frozen-abi" }
solana-frozen-abi-macro = { path = "../../agave/frozen-abi/macro" }
solana-instruction = { path = "../../agave/sdk/instruction" }
solana-logger = { path = "../../agave/logger" }
solana-msg = { path = "../../agave/sdk/msg" }
solana-program = { path = "../../agave/sdk/program", default-features = false }
solana-program-entrypoint = { path = "../../agave/sdk/program-entrypoint" }
solana-program-error = { path = "../../agave/sdk/program-error" }
solana-pubkey = { path = "../../agave/sdk/pubkey", default-features = false }

[patch.crates-io]
solana-program = { path = "../../agave/sdk/program" }
solana-sdk = { path = "../../agave/sdk" }
solana-zk-sdk = { path = "../../agave/zk-sdk" }
solana-zk-token-sdk = { path = "../../agave/zk-token-sdk" }

[workspace.metadata.cli]
solana = "2.1.0"

[workspace.metadata.toolchains]
format = "nightly-2024-08-08"
lint = "nightly-2024-08-08"
test = "nightly-2024-08-08"
