[workspace]
resolver = "2"
members = [
    "clients/rust",
    "interface",
]

[workspace.package]
authors = ["Anza Maintainers <maintainers@anza.xyz>"]
repository = "https://github.com/solana-program/system"
homepage = "https://anza.xyz/"
license = "Apache-2.0"
edition = "2021"

[workspace.dependencies]
solana-account-info = "2.2.1"
solana-cpi = "2.2.1"
solana-decode-error = "2.2.1"
solana-example-mocks = "2.2.1"
solana-frozen-abi = "2.2.1"
solana-frozen-abi-macro = "2.2.1"
solana-instruction = "2.2.1"
solana-logger = "2.2.1"
solana-nonce = "2.2.1"
solana-msg = "2.2.1"
solana-program-entrypoint = "2.2.1"
solana-program-error = "2.2.1"
solana-pubkey = { version = "2.2.1", default-features = false }
solana-sysvar = { version = "2.2.1", features = ["bincode"] }
solana-sysvar-id = "2.2.1"
