[package]
name = "solana-system-interface"
version = "1.0.0"
description = "Instructions and constructors for the System program"
readme = "README.md"
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu", "wasm32-unknown-unknown"]
all-features = true
rustdoc-args = ["--cfg=docsrs"]

[dependencies]
num-traits = "0.2"
serde = { version = "1.0.210", optional = true }
serde_derive = { version = "1.0.210", optional = true }
solana-decode-error = { workspace = true }
solana-frozen-abi = { workspace = true, features = ["frozen-abi"], optional = true }
solana-frozen-abi-macro = { workspace = true, features = ["frozen-abi"], optional = true }
solana-instruction = { workspace = true, features = ["bincode", "std"], optional = true }
solana-logger = { workspace = true, optional = true }
solana-msg = { workspace = true }
solana-program-error = { workspace = true }
solana-pubkey = { workspace = true, default-features = false }

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = "0.3.72"
wasm-bindgen = "0.2"

[dev-dependencies]
anyhow = "1.0.89"
borsh = { version = "1.5.1", features = ["derive", "unstable__schema"] }
solana-account-info = { workspace = true }
solana-cpi = { workspace = true }
solana-example-mocks = { workspace = true }
solana-nonce = { workspace = true }
solana-program-entrypoint = { workspace = true }
solana-program-error = { workspace = true, features = ["borsh"] }
solana-pubkey = { workspace = true, features = ["std"] }
solana-system-interface = { path = ".", features = ["bincode"] }
solana-sysvar = { workspace = true }
solana-sysvar-id = { workspace = true }
static_assertions = "1.1.0"
strum = "0.24"
strum_macros = "0.24"

[features]
bincode = ["dep:solana-instruction", "serde"]
frozen-abi = [
    "dep:solana-frozen-abi",
    "dep:solana-frozen-abi-macro",
    "dep:solana-logger",
    "solana-pubkey/frozen-abi",
    "solana-pubkey/std"
]
serde = ["dep:serde", "dep:serde_derive", "solana-pubkey/serde"]

[lib]
crate-type = ["cdylib", "rlib"]
