[package]
name = "solana-system-program"
version = "3.0.0"
description = "Solana System Program"
readme = "README.md"
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[package.metadata.solana]
program-id = "11111111111111111111111111111111"

[features]
bpf-entrypoint = []

[dependencies]
solana-account-info = { workspace = true }
solana-bincode = { workspace = true }
solana-msg = { workspace = true }
solana-program-entrypoint = { workspace = true }
solana-program-error = { workspace = true }
solana-pubkey = { workspace = true, features = ["sha2"] }
solana-system-interface = { path = "../interface", features = ["serde"] }

[dev-dependencies]
mollusk-svm = "0.1.0"
solana-account = { workspace = true }
solana-system-interface = { path = "../interface", features = ["bincode"] }

[lib]
crate-type = ["cdylib"]

[lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = [
    'cfg(target_os, values("solana"))',
]
