[package]
name = "solana-system-instruction"
version = "0.0.1"
description = "Instructions and constructors for the System program"
repository = "https://github.com/solana-program/system"
edition = "2021"
readme = "README.md"
license-file = "../../LICENSE"

[dependencies]
num-derive = "0.4"
num-traits = "0.2"
serde = { version="1.0.210" }
serde_derive = { version="1.0.210" }
solana-instruction = { version="2.1.0", features=["bincode"], git="https://github.com/anza-xyz/agave.git" }
solana-pubkey = { version="2.1.0", features=["serde"], git="https://github.com/anza-xyz/agave.git" }

[dev-dependencies]
static_assertions = "1.1.0"
