[package]
name = "solana-system-client"
version = "0.0.1"
description = "A generated Rust library for the System program"
repository = "https://github.com/solana-program/system"
edition = "2021"
readme = "README.md"
license-file = "../../LICENSE"

[features]
fetch = ["dep:solana-rpc-client"]
test-sbf = []

[dependencies]
borsh = "^1.0"
num-derive = "^0.4"
num-traits = "^0.2"
solana-account = "~3.0"
solana-account-info = "~3.1"
solana-address = { version = "~2.4", features = [
  'borsh',
  'copy',
  'curve25519',
  'decode',
] }
solana-rpc-client = { version = "^3.0", optional = true }
solana-cpi = "~3.1"
solana-decode-error = "~2.3"
solana-instruction = "~3.2"
solana-program-error = "~3.0"
spl-collections = { version = "^0.1", features = ["borsh"] }
thiserror = "^1.0"
